--- a/cssAssignment/1/index.html
+++ b/cssAssignment/1/index.html
@@ -18,8 +18,8 @@
                 </div>
                 <div class="rightH">
                     <ul>
-                        <li><a href="#home">HOME</a> </li>
-                        <li><a href="">ABOUT</a></li>
+                        <li><a href="index.html">HOME</a> </li>
+                        <li><a href="about.html">ABOUT</a></li>
                         <li><a href="">OUR WORK</a></li>
                         <li><a href="">BLOG</a></li>
                         <li><a href="">CONTACT</a></li>
