--- a/cssAssignment/3/index.html
+++ b/cssAssignment/3/index.html
@@ -17,7 +17,7 @@
                 <form action="index.html">
                     <label for="Registration Form">Registrstion info</label>
                     <input type="text" name="name" placeholder="name" id="">
-                    <input type="date" name="date" placeholder="Birthdate" id="">
+                    <input type="calender" name="date" placeholder="Birthdate" id="">
                     <select name="Gender" id="">
                         <option value="Gender">Gender</option>
                         <option value="Male">MALE</option>
