--- a/week two assignment/4/index.html
+++ b/week two assignment/4/index.html
@@ -33,8 +33,8 @@
 
             </div>
             <div>
-                <img id="icn1" src="https://img.icons8.com/color/48/000000/twitter.png" />
-                <img id="icn2" src="https://img.icons8.com/color/48/000000/facebook-new.png" />
+              <a href="https://twitter.com">  <img id="icn1" src="https://img.icons8.com/color/48/000000/twitter.png" /></a>
+               <a href="https://www.facebook.com"><img id="icn2" src="https://img.icons8.com/color/48/000000/facebook-new.png" /></a> 
             </div>
         </div>
 
@@ -48,10 +48,10 @@
                     <h1>U</h1>
                 </div>
                 <div id="icn">
-                    <img src="https://img.icons8.com/windows/50/000000/facebook-f.png"/>
-                    <img src="https://img.icons8.com/android/32/000000/twitter.png"/>
-                    <img src="https://img.icons8.com/windows/32/000000/pinterest-p.png"/>
-                    <img src="https://img.icons8.com/ios/50/000000/instagram-new.png"/>
+                   <a href="https://www.facebook.com"><img src="https://img.icons8.com/windows/50/000000/facebook-f.png"/></a> 
+                    <a href="https://twitter.com"><img src="https://img.icons8.com/android/32/000000/twitter.png"/></a>
+                   <a href="https://in.pinterest.com"> <img src="https://img.icons8.com/windows/32/000000/pinterest-p.png"/></a>
+                   <a href="https://www.instagram.com"> <img src="https://img.icons8.com/ios/50/000000/instagram-new.png"/></a>
                 </div>
             </div>
             <div>
