--- a/week two assignment/1/about.html
+++ b/week two assignment/1/about.html
@@ -15,7 +15,7 @@
         </div>
         <div class="right">
             <ul>
-                <li> <a href="test.html"> HOME</a></li>
+                <li> <a href="index.html"> HOME</a></li>
                 <li> <a href="about.html">ABOUT</a></li>
                 <li> <a href="">GALLERY</a></li>
                 <li> <a href="">NEWS</a></li>
