--- a/week two assignment/5/index.html
+++ b/week two assignment/5/index.html
@@ -9,108 +9,116 @@
 </head>
 
 <body>
-    <div id="back" > <img  src="./pexels-jess-bailey-designs-743986.jpg" alt=""></div>
-        <div class="main">
+    <div id="back"> <img src="./pexels-jess-bailey-designs-743986.jpg" alt=""></div>
+    <div class="main">
 
-            <div id="nav">
-                <h1>Forms</h1>
+        <div id="nav">
+            <h1>Forms</h1>
+        </div>
+        <div class="b_box">
+            <div class="box1">
+                <div class="head">
+                    <div>
+                        <h1>Log In</h1>
+                    </div>
+                    <div id="icn">
+                        <a href="https://www.facebook.com"><img
+                                src="https://img.icons8.com/windows/50/000000/facebook-f.png" /></a>
+                        <a href="https://twitter.com"><img
+                                src="https://img.icons8.com/android/32/000000/twitter.png" /></a>
+                        <a href="https://in.pinterest.com"> <img
+                                src="https://img.icons8.com/windows/32/000000/pinterest-p.png" /></a>
+
+                    </div>
+                </div>
+                <div>
+                    <form action="">
+                        <input type="email" name="" placeholder="Your Email" id="">
+                        <input type="password" placeholder="Your Password" name="" id="">
+                        <div>
+                            <label for="">Forgot <a href="">Password?</a> </label>
+                        </div>
+                        <div id="sub">
+                            <input type="submit" value="LOG IN" name="submit" id="">
+                            <label for="submit">Dont have an account? <a href="">Sign Up</a> </label>
+                        </div>
+                    </form>
+                </div>
             </div>
-            <div class="b_box">
-                <div class="box1">
-                    <div class="head">
-                        <div>
-                            <h1>Log In</h1>
-                        </div>
-                        <div id="icn">
-                            <img src="https://img.icons8.com/windows/50/000000/facebook-f.png" />
-                            <img src="https://img.icons8.com/android/32/000000/twitter.png" />
-                            <img src="https://img.icons8.com/windows/32/000000/pinterest-p.png" />
 
-                        </div>
-                    </div>
+
+
+
+
+
+
+            <div class="box2">
+                <div class="head">
                     <div>
-                        <form action="">
-                            <input type="email" name="" placeholder="Your Email" id="">
-                            <input type="password" placeholder="Your Password" name="" id="">
-                            <div>
-                                <label for="">Forgot <a href="">Password?</a> </label>
-                            </div>
-                            <div id="sub">
-                                <input type="submit" value="LOG IN" name="submit" id="">
-                                <label for="submit">Dont have an account? <a href="">Sign Up</a> </label>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-
-
-
-
-
-
-
-                <div class="box2">
-                    <div class="head">
-                        <div>
-                            <h1>Sign up</h1>
-                        </div>
-
-                    </div>
-                    <div>
-                        <form action="">
-                            <input type="email" name="" placeholder="Your Email" id="">
-                            <input type="password" placeholder="Your Password" name="" id="">
-                            <div id="chk">
-                                <input type="checkbox" name="" id="">
-                                <label for="">Accept <a href=""> Terms and Condition</a> </label>
-                            </div>
-                            <div id="sub">
-                                <input type="submit" value="SIGN UP" name="submit" id="">
-                                <label for="submit">Have an account? <a href="">Log In</a> </label>
-                            </div>
-                        </form>
-                        <div id="icn">
-                            <img src="https://img.icons8.com/windows/50/000000/facebook-f.png" />
-                            <img src="https://img.icons8.com/android/32/000000/twitter.png" />
-                            <img src="https://img.icons8.com/windows/32/000000/pinterest-p.png" />
-
-                        </div>
+                        <h1>Sign up</h1>
                     </div>
 
                 </div>
-
-
-
-
-                <div class="box3">
-                    <div class="head">
-                        <div>
-                            <h1>Sign In</h1>
+                <div>
+                    <form action="">
+                        <input type="email" name="" placeholder="Your Email" id="">
+                        <input type="password" placeholder="Your Password" name="" id="">
+                        <div id="chk">
+                            <input type="checkbox" name="" id="">
+                            <label for="">Accept <a href=""> Terms and Condition</a> </label>
                         </div>
-
+                        <div id="sub">
+                            <input type="submit" value="SIGN UP" name="submit" id="">
+                            <label for="submit">Have an account? <a href="">Log In</a> </label>
+                        </div>
+                    </form>
+                    <div id="icn">
+                        <a href="https://www.facebook.com"><img
+                                src="https://img.icons8.com/windows/50/000000/facebook-f.png" /></a>
+                        <a href="https://twitter.com"><img
+                                src="https://img.icons8.com/android/32/000000/twitter.png" /></a>
+                        <a href="https://in.pinterest.com"> <img
+                                src="https://img.icons8.com/windows/32/000000/pinterest-p.png" /></a>
                     </div>
-                    <div>
-                        <form action="">
-                            <input type="email" name="" placeholder="Your Email" id="">
-                            <input type="password" placeholder="Your Password" name="" id="">
-                            <div>
-                                <label for="">Forgot <a href="">Password?</a> </label>
-                            </div>
-                            <div id="sub">
-                                <input type="submit" value="SIGN IN" name="submit" id="">
-                                <label for="submit">or Sign in with:</label>
-                            </div>
-                        </form>
-                        <div id="icn">
-                            <div><img src="https://img.icons8.com/windows/50/000000/facebook-f.png" /></div>
-                            <div><img src="https://img.icons8.com/android/32/000000/twitter.png" /></div>
-                            <div><img src="https://img.icons8.com/windows/32/000000/pinterest-p.png" /></div>
+                </div>
 
+            </div>
+
+
+
+
+            <div class="box3">
+                <div class="head">
+                    <div>
+                        <h1>Sign In</h1>
+                    </div>
+
+                </div>
+                <div>
+                    <form action="">
+                        <input type="email" name="" placeholder="Your Email" id="">
+                        <input type="password" placeholder="Your Password" name="" id="">
+                        <div>
+                            <label for="">Forgot <a href="">Password?</a> </label>
                         </div>
+                        <div id="sub">
+                            <input type="submit" value="SIGN IN" name="submit" id="">
+                            <label for="submit">or Sign in with:</label>
+                        </div>
+                    </form>
+                    <div id="icn">
+                        <div><a href="https://www.facebook.com"><img
+                                    src="https://img.icons8.com/windows/50/000000/facebook-f.png" /></a></div>
+                        <div><a href="https://twitter.com"><img
+                                    src="https://img.icons8.com/android/32/000000/twitter.png" /></a></div>
+                        <div> <a href="https://in.pinterest.com"> <img
+                                    src="https://img.icons8.com/windows/32/000000/pinterest-p.png" /></a></div>
+
                     </div>
                 </div>
             </div>
         </div>
+    </div>
     </div>
 </body>
 
