--- a/week three assignment/4/index.html
+++ b/week three assignment/4/index.html
@@ -113,9 +113,9 @@
   </div>
 
   <!-- icons -->
-  <div class="container w-50" id="icn">
-    <div class="row ">
-      <div class=" card col-lg-3 col-6">
+  <div class="container w-50 " id="icn">
+    <div class="row my-3">
+      <div class="card col-lg-3 col-6">
         <img src="https://img.icons8.com/wired/64/000000/circuit.png" />
         <caption class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</caption>
       </div>
@@ -169,11 +169,11 @@
   </div>
 
   <!-- int stat -->
-  <div class="container-fluid">
-    <h1 class="text-center display-4 font-weight-bold">
+  <div class="container-fluid jumbotron">
+    <h1 class=" text-center display-4 font-weight-bold">
       Internet Stat
     </h1>
-    <blockquote class="muted text-center font-weight-light ">Marketing is crucial.Be Known</blockquote>
+    <blockquote class=" muted text-center font-weight-light ">Marketing is crucial.Be Known</blockquote>
     <div class="container">
       <div class="row  stat">
 
@@ -250,6 +250,43 @@
 
   </div>
   </form>
+
+  <footer>
+    <div class="container-fluid bg-secondary">
+      <div class="row pl-5">
+
+        <div class="col-3">
+          <h5 class="text-white">ABOUT US</h5>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, accusantium!
+        </div>
+        <div class="col-3">
+          <h4 class="text-white">QUICK LINKS</h4>
+          <ul >
+            <li >
+              <h5>blah</h5>
+            </li>
+            <li>
+              <h5>blah</h5>
+            </li>
+            <li>
+              <h5>blah</h5>
+            </li>
+            <li>
+              <h5>blah</h5>
+            </li>
+          </ul>
+        </div>
+
+        <div class="col-5">
+          <h1 class="text-white">SUBSCRIBE</h1>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro unde laboriosam quae.</p>
+          <form action="">
+            <input type="email" class="form-control" name="" id="" placeholder="@">
+          </form>
+        </div>
+      </div>
+    </div>
+  </footer>
 
 
 
