--- a/week three assignment/4/index.html
+++ b/week three assignment/4/index.html
@@ -218,8 +218,8 @@
     </div>
   </div>
 
-  <div class="container">
-    <h1 class="display-4 text-center jumbotron">
+  <div class="container jumbotron">
+    <h1 class="display-4 text-center ">
       Take Me To Your Leader
       <blockquote class="blockquote ">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, doloremque. Quasi, delectus.
@@ -250,10 +250,10 @@
 
   </div>
   </form>
-
+<!-- footer -->
   <footer>
     <div class="container-fluid bg-secondary">
-      <div class="row pl-5">
+      <div class="row pl-5 pb-4">
 
         <div class="col-3">
           <h5 class="text-white">ABOUT US</h5>
